--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
 @import 'theme';
+
+.error {
+    color: #ff0000;
+    font-size: 12px;
+}
+
+.my-special-class {
+    border: 1px solid #ff0000;
+}
